2008-08-06  Dalibor Topic  <robilad@kaffe.org>

	* README: Updated the options and features list.

2008-08-06  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac (AC_INIT), fastjar.texi, README, NEWS: 
	Bumped version to 0.96. Autoupdated.

	* fastjar.texi: Added 2008 to copyright years.

	* .cvsignore, INSTALL, aclocal.m4, config.guess, config.h.in,
	config.sub, configure, depcomp, install-sh, ltmain.sh, 
	texinfo.tex, lib/.cvsignore, lib/Makefile.am, lib/Makefile.in,
	lib/alloca.c, lib/asnprintf.c, lib/config.charset, lib/getopt.c,
	lib/getopt1.c, lib/getopt_int.h, lib/gettext.h, 
	lib/localcharset.c, lib/localcharset.h, lib/malloc.c, 
	lib/printf-args.c, lib/printf-args.h, lib/printf-parse.c,
	lib/printf-parse.h, lib/ref-add.sin, lib/ref-del.sin, 
	lib/regcomp.c, lib/regex.c, lib/regex.h, lib/regex_internal.c,
	lib/regex_internal.h, lib/regexec.c, lib/size_max.h,
	lib/snprintf.c, lib/strdup.c, lib/vasnprintf.c,
	lib/vasnprintf.h, lib/xsize.h, m4/.cvsignore,
	m4/alloca.m4, m4/extensions.m4, m4/getopt.m4,
	m4/gnulib-cache.m4, m4/gnulib-common.m4,
	m4/gnulib-comp.m4, m4/gnulib-tool.m4, m4/intmax_t.m4,
	m4/libtool.m4, m4/longlong.m4, m4/ltoptions.m4,
	m4/ltsugar.m4, m4/ltversion.m4, m4/lt~obsolete.m4,
	m4/regex.m4, m4/snprintf.m4, m4/stdint.m4,
	m4/stdio_h.m4, m4/string_h.m4, m4/unistd_h.m4
	m4/vasnprintf.m4, m4/wchar.m4, m4/wctype.m4,
	m4/wint_t.m4: Regenerated.

2008-08-06  Matthias Klose  <doko@ubuntu.com>

	Implemented @file support.

	* Makefile.am (libfastjar_convenience_la_SOURCES):
	Added argv.c and argv.h.

	* Makefile.in: Regenerated.

	* jartool.c (OPTION_STRING) Added -J option.
	(main) Expand @file arguments in the argument list 
	before processing the list. Ignore -J option.
	(help) Documented -J and @file options.

	* fastjar.texi: Documented -J and @file options.

	* argv.c, argv.h: New files.

2007-03-31  Dalibor Topic  <robilad@kaffe.org>

	* NEWS: Added news since 0.95.

2007-03-31  Dalibor Topic  <robilad@kaffe.org>

	* Makefile.in,
	config.h.in